Modified: minor fixing on the ipynb presentation

--- a/FinalAssessment.ipynb
+++ b/FinalAssessment.ipynb
@@ -5,10 +5,12 @@
    "id": "b92bc121-657c-4ca1-b8d5-d113d13cfdef",
    "metadata": {},
    "source": [
+    "Final Assessment for MSDS Unsupervised Algorithms in Macine Learning.\n",
+    "\n",
     "# **Classify Stock Price Trends**\n",
     "In this assignment, I'll try to see if we can see strong trends on stock price per industry.  \n",
     "Some event will strongly affect to certain kind of business. So sometimes we should be able to see similar trends on similar company.  \n",
-    "So we may see that clustering algorithm will have clear separation for each category where each company sits in.\n",
+    "So we may see that clustering algorithm will have clear separation for each bisiness domain where each company is in.\n",
     "\n",
     "At the same time, stock price are correlated with performance of each company and should be different even if they are in the same category.  \n",
     "Let's see how it works.\n",
@@ -25,7 +27,7 @@
     "Stock Price Dataset we use are named using ticker symbol. So I need to know mapping between ticker symbol to some kind of category information.\n",
     "\n",
     "There are several services to obtain such information like [here](https://sec-api.io/profile).  \n",
-    "This time, I pre-fetched data and stored to `ticekr_mapping.csv`, as it takes a bit long. "
+    "This time, I pre-fetched data and stored to `ticker_mapping.csv`, as it takes a bit long. "
    ]
   },
   {
@@ -838,7 +840,7 @@
    "id": "fa1389e7-1c3f-456c-8ed4-d074755fc5ad",
    "metadata": {},
    "source": [
-    "### Remove data with invalid info\n",
+    "### Remove data with null values\n",
     "Some company has invalid data, and I decided to remove such data."
    ]
   },
